src/main/resources/jitsi/ingress-etherpad.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etherpad
  annotations:
    cert-manager.io/cluster-issuer: REPLACEME
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - REPLACE_ETHERPAD_FQDN
    secretName: tls-etherpad
  rules:
  - host: REPLACE_ETHERPAD_FQDN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: etherpad
            port:
              number: 9001
